Update Google Apps Script URL in index.html

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     // =============================================
     // CONFIGURATION - UPDATE THIS URL AFTER DEPLOY
     // =============================================
-    const APPS_SCRIPT_URL = "YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE";
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwsjuyRcOLWz09pz7gI8C5tJi2cWGkt6kSkPkKESKMPN5VyGIBy1n3e317reGCIr4Yw/exec";
 
     const topics = [
         { id: "Group_01_Computer_Vision", title: "Computer Vision", icon: "👁️", desc: "Pothole Detection, Cocoa Counting, Disease Classification" },
