Added GitHub username collection for automated team invites

--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
                                     <label class="form-label" data-i18n="email">Email Address</label> <span class="text-danger">*</span>
                                     <input type="email" class="form-control" name="email" id="email" required>
                                 </div>
+                                <div class="mb-3">
+                                    <label class="form-label" data-i18n="githubUsername">GitHub Username</label> <span class="text-danger">*</span>
+                                    <input type="text" class="form-control" name="githubUsername" id="githubUsername" required
+                                           placeholder="ex: john_doe">
+                                    <small class="form-text text-muted" data-i18n="githubHelp">You'll be invited to your team's repository using this username.</small>
+                                </div>
                             </div>
                         </div>
 
@@ -201,6 +207,8 @@
             yourDetails: "Your Details",
             fullName: "Full Name",
             email: "Email Address",
+            githubUsername: "GitHub Username",
+            githubHelp: "You'll be invited to your team's repository using this username.",
             step2: "Step 2:",
             chooseTheme: "Choose Your Research Theme",
             loadingTopics: "Loading topic availability...",
@@ -233,6 +241,8 @@
             yourDetails: "Vos Informations",
             fullName: "Nom Complet",
             email: "Adresse Email",
+            githubUsername: "Nom d'utilisateur GitHub",
+            githubHelp: "Vous serez invité(e) au dépôt de votre équipe avec ce nom d'utilisateur.",
             step2: "Étape 2 :",
             chooseTheme: "Choisissez Votre Thème de Recherche",
             loadingTopics: "Chargement des thèmes disponibles...",
