--- a/index.html
+++ b/index.html
@@ -414,17 +414,23 @@
         const data = Object.fromEntries(formData);
 
         try {
+            // Use text/plain to avoid CORS preflight (Apps Script limitation)
             const response = await fetch(APPS_SCRIPT_URL, {
                 method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(data)
+                headers: { 'Content-Type': 'text/plain;charset=utf-8' },
+                body: JSON.stringify(data),
+                redirect: 'follow'
             });
 
-            if (!response.ok) {
-                throw new Error(`HTTP ${response.status}`);
+            const text = await response.text();
+            console.log('Raw response:', text); // Debug log
+            
+            let result;
+            try {
+                result = JSON.parse(text);
+            } catch (parseErr) {
+                throw new Error('Invalid response from server');
             }
-
-            const result = await response.json();
             console.log('Registration result:', result); // Debug log
 
             if (result.result === "success") {
